...
                    android:src="@drawable/ic_menu_bookmarks_fill" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="Закладки"
                    android:textColor="@color/safari_menu_label"
                    android:textSize="10sp" />
            </LinearLayout>

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/safari_menu_hairline" />

            <LinearLayout
                android:id="@+id/moreTabs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical"
...
