...

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:text="Поделиться"
                    android:textColor="@color/safari_text"
                    android:textSize="15sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
...
